--- a/build.yaml
+++ b/build.yaml
@@ -15,5 +15,9 @@
 include:
   - board: nice_nano_v2
     shield: lily58_left
+    shield: nice_view_adapter
+    shield: nice_view
   - board: nice_nano_v2
     shield: lily58_right
+    shield: nice_view_adapter
+    shield: nice_view
