--- a/build.yaml
+++ b/build.yaml
@@ -14,10 +14,6 @@
 ---
 include:
   - board: nice_nano_v2
-    shield: lily58_left
-    shield: nice_view_adapter
-    shield: nice_view
+    shield: lily58_left nice_view_adapter nice_view
   - board: nice_nano_v2
-    shield: lily58_right
-    shield: nice_view_adapter
-    shield: nice_view
+    shield: lily58_right nice_view_adapter nice_view
